# psvlzt

./: .gitignore  MANIFEST.in  README.md  settings_local.py  setup.cfg
.devcontainer/: devcontainer.json
custom_ui_tutorial_app/: apps.py  queue_settings_calculators.py  urls.py  views.py
custom_ui_tutorial_app/output_views/: gaussian_eigenvalues_view.py
custom_ui_tutorial_app/static/custom_ui_tutorial_app/: README.md
custom_ui_tutorial_app/templates/custom_ui_tutorial_app/: home.html
