[metadata]
name = custom_ui_tutorial_app
version = 0.1.0
description = Custom Django app with everything needed to be installed in the airavata-django-portal

[options]
packages = find:
# Include data files as specified in MANIFEST.in
include_package_data = True
install_requires =
    django >= 3.2
    airavata-django-portal-sdk
    cclib
    numpy
    matplotlib
    requests

[options.entry_points]
airavata.djangoapp =
    custom_ui_tutorial_app = custom_ui_tutorial_app.apps:CustomUiTutorialAppConfig
airavata.output_view_providers =
    gaussian_eigenvalues_view = custom_ui_tutorial_app.output_views.gaussian_eigenvalues_view:GaussianEigenvaluesViewProvider
